Fix width of video container on home page on mobile

--- a/src/app/main/components/demo/demo.component.scss
+++ b/src/app/main/components/demo/demo.component.scss
@@ -1,4 +1,5 @@
 .demo {
+  max-width: 100%;
 
   &__title {
     text-align: center;
